# claim-assistant

./: .gitignore  CLAUDE.md  README.md  USAGE.md  claim_assistant.py  claimctl.ini.sample  create_test_pdf.py  custom_completer.py  debug.patch  diagnose_db.py  fix_completion.py  fix_database.py  install.py  migrate_database.py  migrate_document_relationships.py  migrate_metadata.py  model-info.md  pyproject.toml  run.sh  setup_env.sh  test_chunking.py  test_content.txt  test_openai.py  test_reranking.py
claimctl/: __init__.py  cli.py  config.py  database.py  document_boundary_features.py  document_processor.py  document_segmentation.py  ingest.py  ingestion_logger.py  interactive.py  large_document_processor.py  multi_strategy_boundary_detection.py  preprocessing.py  query.py  rerank.py  search.py  semantic_chunking.py  timeline.py  utils.py
docs/: chunking.md
tests/: README.md  __init__.py  create_test_dataset.py  test_boundary_detection.py  test_document_segmentation.py  test_preprocessing.py  test_retrieval.py
tests/fixtures/: README.md  golden.yml
tests/fixtures/boundary_test_dataset/: metadata.json
tests/fixtures/sample_pdfs/: README.md
